Adicionado hover e href nas caixas de projetos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="">Home</a>
             <a href="#nav-skills">Skills</a>
             <a href="#nav-laboratorio">Laboratório</a>
-            <a href="https://github.com/pedrihq">Github</a>
+            <a href="https://github.com/pedrihq" target="_blank">Github</a>
           </div>
         </nav>
         <div class="principal">
@@ -32,7 +32,7 @@
               na Unicesumar e tenho o ensino médio completo.
             </p>
             <a href="https://github.com/pedrihq"
-              ><img
+               target="_blank"><img
                 class="img-git-header"
                 src="./img/icons8-github.svg"
                 alt=""
@@ -99,14 +99,17 @@
           </h1>
           <div>
             <a href="mailto:phenrinasci@gmail.com"
+            target="_blank"
               ><img src="./img/icons8-gmail-novo.svg" alt="" />
               <p>phenrinasci@gmail.com</p></a
             >
             <a href="https://github.com/pedrihq"
+            target="_blank"
               ><img src="./img/icons8-github.svg" alt="" />
               <p>pedrihq</p></a
             >
             <a href="https://linkedin.com/in/phenrinasci"
+            target="_blank"
               ><img src="./img/icons8-linkedin.svg" alt="" />
               <p>pedrihq</p></a
             >
